# lact-o-sensus

./: .gitignore  .rustfmt.toml  Cargo.toml  GEMINI.md  ROADMAP.md
crates/ai-veto/: Cargo.toml
crates/ai-veto/src/: args.rs  main.rs  model.rs  service.rs
crates/client-cli/: Cargo.toml
crates/client-cli/src/: client.rs  lib.rs  main.rs  repl.rs  state.rs  wal.rs
crates/common/: Cargo.toml  build.rs
crates/common/proto/: app.proto  lacto_sensus.proto  raft.proto
crates/common/src/: lib.rs  proto.rs  raft_api.rs  rpc.rs  taxonomy.rs  types.rs  units.rs
crates/common/src/types/: client.rs  consensus.rs  errors.rs  identity.rs  mod.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: ingress.rs  lib.rs  veto.rs
crates/raft-node/: Cargo.toml  config.toml
crates/raft-node/configs/: node_1.toml  node_2.toml  node_3.toml
crates/raft-node/src/: config.rs  consensus.rs  engine.rs  fsm.rs  identity.rs  main.rs  node.rs  peer.rs  state.rs  store.rs
crates/raft-node/src/service/: common.rs  consensus.rs  handle.rs  ingress.rs  mod.rs  veto.rs
docs/: project_overview.md  roadmap.md
docs/adrs/: 001_node_failure_model.md  002_network_topology.md  003_network_timing_model.md  004_bootstrapping_and_identity.md  005_logical_interface_specification.md  006_exactly_once_semantics.md  007_defensive_mutation_lifecycle.md  008_universal_unit_registry.md  009_internal_node_architecture.md
docs/retro/: phase_1_contract.md  phase_2_infrastructure.md  phase_3_5_audit.md  phase_3_consensus.md  phase_4_5_fortress.md  phase_4_ingress_egress.md  phase_5_moral_advocate.md
docs/tasks/: phase_2_todo.md  phase_3_todo.md  phase_4_5_todo.md  phase_4_todo.md  phase_5_todo.md  phase_6_todo.md
scripts/: smoke_test.py  smoke_test.sh
