[package]
name = "client-cli"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
shlex = "1.3"

[dev-dependencies]
tempfile = "3.27.0"
tokio-stream = { version = "0.1.18", features = ["net"] }
