[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
async-trait.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
futures.workspace = true
