[package]
name = "raft-node"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sled.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
